# instant-ngp

./: .gitignore  CMakeLists.txt  README.md  benchmark.cpp  common.cuh  encoder.cu  encoder.cuh  encoding.cu  encoding.cuh  example.py  fully-fused-mlp.cu  fully-fused-mlp.cuh  instant-ngp.cpp  instant-ngp.cu  instant-ngp.h  main.cpp  math-mat.h  math-vec.h  network-detail.cuh  network.cu  network.cuh  ngp.dataset.cpp  ngp.dataset.ixx  ngp.train.cpp  ngp.train.cu  ngp.train.h  ngp.train.ixx  optimizer.cu  optimizer.cuh  sampler.cu
.github/workflows/: arch-build.yml  windows-build.yml
dependencies/cutlass/include/cutlass/: matrix.h
